# ChangeLog for dev-python/django-model-utils
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*django-model-utils-2.2 (03 Mar 2015)

  03 Mar 2015; Justin Lecher <jlec@gentoo.org> +django-model-utils-2.2.ebuild,
  -django-model-utils-1.3.1.ebuild:
  dev-python/django-model-utils: Version BUmp; drop old

*django-model-utils-2.1.1 (29 Nov 2014)

  29 Nov 2014; Johann Schmitz <ercpe@gentoo.org>
  +django-model-utils-2.1.1.ebuild, django-model-utils-1.3.1.ebuild:
  Version bump

  11 Jun 2013; Justin Lecher <jlec@gentoo.org> -ChangeLog:
  Version Bump; fix license; bump to EAPI=5 and new python r1 eclasses