@@ -4,7 +4,7 @@
 
 EAPI=5
 
-PYTHON_COMPAT=( python2_7 python3_{3,4} )
+PYTHON_COMPAT=( python2_7 python3_{3,4} pypy )
 
 inherit distutils-r1
 
@@ -15,7 +15,11 @@ SRC_URI="mirror://pypi/${PN:0:1}/${PN}/${P}.tar.gz"
 SLOT="0"
 LICENSE="BSD"
 KEYWORDS="~amd64 ~x86"
-IUSE=""
+IUSE="test"
 
 RDEPEND=">=dev-python/django-1.4.10[${PYTHON_USEDEP}]"
-DEPEND=""
+DEPEND="test? ( dev-python/coverage[${PYTHON_USEDEP}] )"
+
+python_test() {
+	coverage run -a setup.py test || die
+}
