@@ -2,6 +2,9 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  18 Mar 2015; Justin Lecher <jlec@gentoo.org> django-model-utils-2.2.ebuild:
+  dev-python/django-model-utils: Add pypy support and test
+
 *django-model-utils-2.2 (03 Mar 2015)
 
   03 Mar 2015; Justin Lecher <jlec@gentoo.org> +django-model-utils-2.2.ebuild,
